Feature/osdop 449/nomination appears correctly in work area (#330)
nomination appears correctly in work area