@@ -1,30 +1,38 @@
 package uk.co.nstauthority.offshoresafetydirective.workarea;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.tuple;
 
+import java.util.Collections;
 import java.util.Set;
+import java.util.stream.Stream;
 import org.jooq.DSLContext;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.EnumSource;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.TestEntityManager;
 import org.springframework.transaction.annotation.Transactional;
 import uk.co.nstauthority.offshoresafetydirective.IntegrationTest;
 import uk.co.nstauthority.offshoresafetydirective.authentication.SamlAuthenticationUtil;
+import uk.co.nstauthority.offshoresafetydirective.authentication.ServiceUserDetail;
 import uk.co.nstauthority.offshoresafetydirective.authentication.ServiceUserDetailTestUtil;
-import uk.co.nstauthority.offshoresafetydirective.energyportal.WebUserAccountId;
+import uk.co.nstauthority.offshoresafetydirective.nomination.Nomination;
+import uk.co.nstauthority.offshoresafetydirective.nomination.NominationDetail;
 import uk.co.nstauthority.offshoresafetydirective.nomination.NominationDetailTestUtil;
-import uk.co.nstauthority.offshoresafetydirective.nomination.NominationId;
 import uk.co.nstauthority.offshoresafetydirective.nomination.NominationStatus;
+import uk.co.nstauthority.offshoresafetydirective.nomination.NominationStatusSubmissionStage;
 import uk.co.nstauthority.offshoresafetydirective.nomination.NominationTestUtil;
 import uk.co.nstauthority.offshoresafetydirective.nomination.applicantdetail.ApplicantDetailTestUtil;
 import uk.co.nstauthority.offshoresafetydirective.teams.TeamMemberRoleService;
+import uk.co.nstauthority.offshoresafetydirective.teams.TeamMemberRoleTestUtil;
 import uk.co.nstauthority.offshoresafetydirective.teams.TeamMemberService;
-import uk.co.nstauthority.offshoresafetydirective.teams.TeamRoleUtil;
 import uk.co.nstauthority.offshoresafetydirective.teams.TeamTestUtil;
 import uk.co.nstauthority.offshoresafetydirective.teams.TeamType;
 import uk.co.nstauthority.offshoresafetydirective.teams.permissionmanagement.TeamRole;
+import uk.co.nstauthority.offshoresafetydirective.teams.permissionmanagement.consultee.ConsulteeTeamRole;
 import uk.co.nstauthority.offshoresafetydirective.teams.permissionmanagement.regulator.RegulatorTeamRole;
 
 @Transactional
@@ -32,158 +40,120 @@ import uk.co.nstauthority.offshoresafetydirective.teams.permissionmanagement.reg
 class NominationWorkAreaQueryServiceIntegrationTest {
 
   @Autowired
-  private DSLContext context;
+  DSLContext context;
 
   @Autowired
-  private TeamMemberService teamMemberService;
+  TeamMemberService teamMemberService;
 
   @Autowired
   private NominationWorkAreaQueryService nominationWorkAreaQueryService;
 
   @Autowired
-  private TeamMemberRoleService teamMemberRoleService;
+  TeamMemberRoleService teamMemberRoleService;
 
   @Autowired
   private TestEntityManager entityManager;
 
   @ParameterizedTest
-  @EnumSource(NominationStatus.class)
-  void getNominationDetailsForWorkArea_whenRoleCanOnlySeeSubmittedResults_thenOnlySubmittedResults(
+  @MethodSource("getPostSubmissionStatuses")
+  void getNominationDetailsForWorkArea_whenViewNominationUser_andSubmittedAndDraftNominationsExist_thenOnlySubmittedResults(
       NominationStatus nominationStatus
   ) {
 
-    // Roles to test status filter rule
-    Set<TeamRole> userRoles = Set.of(RegulatorTeamRole.VIEW_NOMINATION);
+    // GIVEN a user who has the VIEW_NOMINATION role in the regulator team
+    var viewNominationUser = givenUserExistsInTeamWithRoles(
+        TeamType.REGULATOR,
+        Collections.singleton(RegulatorTeamRole.VIEW_NOMINATION)
+    );
 
-    // Setup user
-    var user = ServiceUserDetailTestUtil.Builder()
-        .withWuaId(1000L)
-        .build();
-
-    // Ensure user is treated as currently logged in
+    // AND they are logged into the service
     SamlAuthenticationUtil.Builder()
-        .withUser(user)
+        .withUser(viewNominationUser)
         .setSecurityContext();
 
-    // Stub regulator team
-    var team = TeamTestUtil.Builder()
-        .withTeamType(TeamType.REGULATOR)
+    // AND a submitted nomination exists
+
+    var postSubmissionNomination = givenNominationExists();
+
+    var postSubmissionNominationDetail = NominationDetailTestUtil.builder()
         .withId(null)
-        .build();
-
-    entityManager.persistAndFlush(team);
-
-    // Add user to team with the previously defined roles
-    teamMemberRoleService.updateUserTeamRoles(team, new WebUserAccountId(user.wuaId()),
-        TeamRoleUtil.getRoleNames(userRoles));
-
-    // Create and persist nomination details
-    var nomination = NominationTestUtil.builder()
-        .withId(null)
-        .build();
-
-    entityManager.persistAndFlush(nomination);
-
-    var submittedNominationDetail = NominationDetailTestUtil.builder()
-        .withNomination(nomination)
-        .withNominationId(new NominationId(nomination.getId()))
-        .withId(null)
+        .withNomination(postSubmissionNomination)
         .withStatus(nominationStatus)
         .build();
 
-    submittedNominationDetail = entityManager.persistAndFlush(submittedNominationDetail);
+    givenNominationDetailExists(postSubmissionNominationDetail);
 
-    var submittedApplicantDetails = ApplicantDetailTestUtil.builder()
-        .withNominationDetail(submittedNominationDetail)
+    // AND a draft nomination exists
+
+    var preSubmissionNomination = givenNominationExists();
+
+    var preSubmissionNominationDetail = NominationDetailTestUtil.builder()
         .withId(null)
+        .withNomination(preSubmissionNomination)
+        .withStatus(NominationStatus.DRAFT)
+        .withVersion(1)
         .build();
 
-    entityManager.persistAndFlush(submittedApplicantDetails);
+    givenNominationDetailExists(preSubmissionNominationDetail);
 
-    var dtos = nominationWorkAreaQueryService.getWorkAreaItems();
+    // WHEN we get the work area items for the view nomination user
+    var workAreaItems = nominationWorkAreaQueryService.getWorkAreaItems();
 
-    switch (nominationStatus.getSubmissionStage()) {
-      case POST_SUBMISSION -> assertThat(dtos)
-          .map(result -> result.getNominationId().id())
-          .containsExactly(submittedNominationDetail.getNomination().getId());
-      default -> assertThat(dtos).isEmpty();
-    }
-
+    // THEN they are only shown the post submission nomination
+    assertThat(workAreaItems)
+        .extracting(nominationWorkAreaQueryResult -> nominationWorkAreaQueryResult.getNominationId().id())
+        .containsExactly(postSubmissionNominationDetail.getNomination().getId());
   }
 
   @Test
-  void getNominationDetailsForWorkArea_whenRoleCanSeeAllResults_thenAllResults() {
+  void getNominationDetailsForWorkArea_whenManageNominationUser_andSubmittedAndDraftNominationsExist_thenBothReturned() {
 
-    // Roles to test status filter rule
-    Set<TeamRole> userRoles = Set.of(RegulatorTeamRole.MANAGE_NOMINATION);
+    // GIVEN a user who has the MANAGE_NOMINATION role in the regulator team
+    var manageNominationUser = givenUserExistsInTeamWithRoles(
+        TeamType.REGULATOR,
+        Collections.singleton(RegulatorTeamRole.MANAGE_NOMINATION)
+    );
 
-    // Setup user
-    var user = ServiceUserDetailTestUtil.Builder()
-        .withWuaId(1000L)
-        .build();
-
-    // Ensure user is treated as currently logged in
+    // AND they are logged into the service
     SamlAuthenticationUtil.Builder()
-        .withUser(user)
+        .withUser(manageNominationUser)
         .setSecurityContext();
 
-    // Stub regulator team
-    var team = TeamTestUtil.Builder()
-        .withTeamType(TeamType.REGULATOR)
+    // AND a submitted nomination exists
+
+    var postSubmissionNomination = givenNominationExists();
+
+    var postSubmissionNominationDetail = NominationDetailTestUtil.builder()
         .withId(null)
-        .build();
-
-    entityManager.persistAndFlush(team);
-
-    // Add user to team with the previously defined roles
-    teamMemberRoleService.updateUserTeamRoles(team, new WebUserAccountId(user.wuaId()),
-        TeamRoleUtil.getRoleNames(userRoles));
-
-    // Create and persist nomination details
-    var nomination = NominationTestUtil.builder()
-        .withId(null)
-        .build();
-
-    entityManager.persistAndFlush(nomination);
-
-    var submittedNominationDetail = NominationDetailTestUtil.builder()
-        .withNomination(nomination)
-        .withNominationId(new NominationId(nomination.getId()))
-        .withId(null)
+        .withNomination(postSubmissionNomination)
         .withStatus(NominationStatus.SUBMITTED)
         .build();
 
-    var draftNominationDetail = NominationDetailTestUtil.builder()
-        .withNomination(nomination)
-        .withNominationId(new NominationId(nomination.getId()))
+    givenNominationDetailExists(postSubmissionNominationDetail);
+
+    // AND a draft nomination exists
+
+    var preSubmissionNomination = givenNominationExists();
+
+    var preSubmissionNominationDetail = NominationDetailTestUtil.builder()
         .withId(null)
+        .withNomination(preSubmissionNomination)
+        .withVersion(1)
         .withStatus(NominationStatus.DRAFT)
         .build();
 
-    submittedNominationDetail = entityManager.persistAndFlush(submittedNominationDetail);
-    draftNominationDetail = entityManager.persistAndFlush(draftNominationDetail);
+    givenNominationDetailExists(preSubmissionNominationDetail);
 
-    var draftApplicantDetails = ApplicantDetailTestUtil.builder()
-        .withNominationDetail(draftNominationDetail)
-        .withId(null)
-        .build();
+    // WHEN we get the work area items for the manage nomination user
+    var workAreaItems = nominationWorkAreaQueryService.getWorkAreaItems();
 
-    var submittedApplicantDetails = ApplicantDetailTestUtil.builder()
-        .withNominationDetail(submittedNominationDetail)
-        .withId(null)
-        .build();
-
-    entityManager.persistAndFlush(draftApplicantDetails);
-    entityManager.persistAndFlush(submittedApplicantDetails);
-
-    var dtos = nominationWorkAreaQueryService.getWorkAreaItems();
-    assertThat(dtos)
-        .map(result -> result.getNominationId().id())
-        .containsExactly(
-            submittedNominationDetail.getNomination().getId(),
-            draftNominationDetail.getNomination().getId()
+    // THEN they are shows both submitted and draft
+    assertThat(workAreaItems)
+        .extracting(nominationWorkAreaQueryResult -> nominationWorkAreaQueryResult.getNominationId().id())
+        .containsExactlyInAnyOrder(
+            postSubmissionNominationDetail.getNomination().getId(),
+            preSubmissionNominationDetail.getNomination().getId()
         );
-
   }
 
   @ParameterizedTest
@@ -192,145 +162,317 @@ class NominationWorkAreaQueryServiceIntegrationTest {
       mode = EnumSource.Mode.EXCLUDE,
       names = {"MANAGE_NOMINATION", "VIEW_NOMINATION"}
   )
-  void getNominationDetailsForWorkArea_whenRoleShouldNotHaveResults_thenNoResults(RegulatorTeamRole teamRole) {
+  void getNominationDetailsForWorkArea_whenUserHasNotAllowingAccessToNominations_thenEmptyWorkArea(RegulatorTeamRole teamRole) {
 
-    // Roles to test status filter rule
-    Set<TeamRole> userRoles = Set.of(teamRole);
+    // GIVEN a user who has a role which doesn't allow access to nominations in the work area
+    var manageNominationUser = givenUserExistsInTeamWithRoles(
+        TeamType.REGULATOR,
+        Collections.singleton(teamRole)
+    );
 
-    // Setup user
-    var user = ServiceUserDetailTestUtil.Builder()
-        .withWuaId(1000L)
-        .build();
-
-    // Ensure user is treated as currently logged in
+    // AND they are logged into the service
     SamlAuthenticationUtil.Builder()
-        .withUser(user)
+        .withUser(manageNominationUser)
         .setSecurityContext();
 
-    // Stub regulator team
-    var team = TeamTestUtil.Builder()
-        .withTeamType(TeamType.REGULATOR)
+    // AND a submitted nomination exists
+
+    var postSubmissionNomination = givenNominationExists();
+
+    var postSubmissionNominationDetail = NominationDetailTestUtil.builder()
         .withId(null)
-        .build();
-
-    entityManager.persistAndFlush(team);
-
-    // Add user to team with the previously defined roles
-    teamMemberRoleService.updateUserTeamRoles(team, new WebUserAccountId(user.wuaId()),
-        TeamRoleUtil.getRoleNames(userRoles));
-
-    // Create and persist nomination details
-    var nomination = NominationTestUtil.builder()
-        .withId(null)
-        .build();
-
-    entityManager.persistAndFlush(nomination);
-
-    var submittedNominationDetail = NominationDetailTestUtil.builder()
-        .withNomination(nomination)
-        .withNominationId(new NominationId(nomination.getId()))
-        .withId(null)
+        .withNomination(postSubmissionNomination)
         .withStatus(NominationStatus.SUBMITTED)
         .build();
 
-    var draftNominationDetail = NominationDetailTestUtil.builder()
-        .withNomination(nomination)
-        .withNominationId(new NominationId(nomination.getId()))
+    givenNominationDetailExists(postSubmissionNominationDetail);
+
+    // AND a draft nomination exists
+
+    var preSubmissionNomination = givenNominationExists();
+
+    var preSubmissionNominationDetail = NominationDetailTestUtil.builder()
         .withId(null)
+        .withNomination(preSubmissionNomination)
+        .withVersion(1)
         .withStatus(NominationStatus.DRAFT)
         .build();
 
-    submittedNominationDetail = entityManager.persistAndFlush(submittedNominationDetail);
-    draftNominationDetail = entityManager.persistAndFlush(draftNominationDetail);
+    givenNominationDetailExists(preSubmissionNominationDetail);
 
-    var draftApplicantDetails = ApplicantDetailTestUtil.builder()
-        .withNominationDetail(draftNominationDetail)
+    // WHEN we get the work area items for the user
+    var workAreaItems = nominationWorkAreaQueryService.getWorkAreaItems();
+
+    // THEN they are not shown any results
+    assertThat(workAreaItems).isEmpty();
+  }
+
+  @ParameterizedTest
+  @EnumSource(ConsulteeTeamRole.class)
+  void getNominationDetailsForWorkArea_whenUserHasNotAllowingAccessToNominations_thenEmptyWorkArea(ConsulteeTeamRole teamRole) {
+
+    // GIVEN a user who has a role which doesn't allow access to nominations in the work area
+    var manageNominationUser = givenUserExistsInTeamWithRoles(
+        TeamType.CONSULTEE,
+        Collections.singleton(teamRole)
+    );
+
+    // AND they are logged into the service
+    SamlAuthenticationUtil.Builder()
+        .withUser(manageNominationUser)
+        .setSecurityContext();
+
+    // AND a submitted nomination exists
+
+    var postSubmissionNomination = givenNominationExists();
+
+    var postSubmissionNominationDetail = NominationDetailTestUtil.builder()
         .withId(null)
+        .withNomination(postSubmissionNomination)
+        .withStatus(NominationStatus.SUBMITTED)
         .build();
 
-    var submittedApplicantDetails = ApplicantDetailTestUtil.builder()
-        .withNominationDetail(submittedNominationDetail)
+    givenNominationDetailExists(postSubmissionNominationDetail);
+
+    // AND a draft nomination exists
+
+    var preSubmissionNomination = givenNominationExists();
+
+    var preSubmissionNominationDetail = NominationDetailTestUtil.builder()
         .withId(null)
+        .withNomination(preSubmissionNomination)
+        .withVersion(1)
+        .withStatus(NominationStatus.DRAFT)
         .build();
 
-    entityManager.persistAndFlush(draftApplicantDetails);
-    entityManager.persistAndFlush(submittedApplicantDetails);
+    givenNominationDetailExists(preSubmissionNominationDetail);
 
-    var dtos = nominationWorkAreaQueryService.getWorkAreaItems();
-    assertThat(dtos).isEmpty();
+    // WHEN we get the work area items for the user
+    var workAreaItems = nominationWorkAreaQueryService.getWorkAreaItems();
 
+    // THEN they are not shown any results
+    assertThat(workAreaItems).isEmpty();
   }
 
   @Test
-  void getNominationDetailsForWorkArea_whenStatusIsDeleted_thenExcludedFromResults() {
+  void getNominationDetailsForWorkArea_whenNominationWithDeletedStatusExist_thenDeletedNominationExcludedFromResults() {
 
-    // Roles to test status filter rule
-    Set<TeamRole> userRoles = Set.of(RegulatorTeamRole.MANAGE_NOMINATION);
+    // GIVEN a user who has a role which allows them to see nominations
+    var manageNominationUser = givenUserExistsInTeamWithRoles(
+        TeamType.REGULATOR,
+        Collections.singleton(RegulatorTeamRole.MANAGE_NOMINATION)
+    );
 
-    // Setup user
+    // AND they are logged into the service
+    SamlAuthenticationUtil.Builder()
+        .withUser(manageNominationUser)
+        .setSecurityContext();
+
+    // AND a deleted nomination exists
+
+    var deletedNomination = givenNominationExists();
+
+    var deletedNominationDetail = NominationDetailTestUtil.builder()
+        .withId(null)
+        .withNomination(deletedNomination)
+        .withVersion(1)
+        .withStatus(NominationStatus.DELETED)
+        .build();
+
+    givenNominationDetailExists(deletedNominationDetail);
+
+    // AND a submitted nomination exists
+
+    var submittedNomination = givenNominationExists();
+
+    var submittedNominationDetail = NominationDetailTestUtil.builder()
+        .withId(null)
+        .withNomination(submittedNomination)
+        .withStatus(NominationStatus.SUBMITTED)
+        .build();
+
+    givenNominationDetailExists(submittedNominationDetail);
+
+    // WHEN we get the work area items for the user
+    var workAreaItems = nominationWorkAreaQueryService.getWorkAreaItems();
+
+    // THEN the deleted nomination is not shown in the work area
+    assertThat(workAreaItems)
+        .extracting(nominationWorkAreaQueryResult -> nominationWorkAreaQueryResult.getNominationId().id())
+        .containsExactly(submittedNominationDetail.getNomination().getId());
+  }
+
+  @ParameterizedTest
+  @MethodSource("getPostSubmissionStatuses")
+  void getNominationDetailsForWorkArea_whenMultipleSubmittedNominationVersion_thenLatestNominationDetailIsReturned(NominationStatus nominationStatus) {
+
+    // GIVEN a user with the manage nominations permission in the regulator team
+    var manageNominationUser = givenUserExistsInTeamWithRoles(
+        TeamType.REGULATOR,
+        Collections.singleton(RegulatorTeamRole.MANAGE_NOMINATION)
+    );
+
+    // AND the user is logged in
+    SamlAuthenticationUtil.Builder()
+        .withUser(manageNominationUser)
+        .setSecurityContext();
+
+    // AND there exist a nomination which has two submitted versions
+
+    var nomination = givenNominationExists();
+
+    var firstNominationDetailVersion = NominationDetailTestUtil.builder()
+        .withId(null)
+        .withNomination(nomination)
+        .withVersion(1)
+        .withStatus(NominationStatus.SUBMITTED)
+        .build();
+
+    givenNominationDetailExists(firstNominationDetailVersion);
+
+    var secondNominationDetailVersion = NominationDetailTestUtil.builder()
+        .withId(null)
+        .withNomination(nomination)
+        .withVersion(2)
+        .withStatus(nominationStatus)
+        .build();
+
+    givenNominationDetailExists(secondNominationDetailVersion);
+
+    // WHEN we get the work area items for the logged in user
+    var workAreaItems = nominationWorkAreaQueryService.getWorkAreaItems();
+
+    // THEN only the latest version of the nomination is returned
+    assertThat(workAreaItems)
+        .extracting(
+            nominationWorkAreaItem -> nominationWorkAreaItem.getNominationId().id(),
+            nominationWorkAreaItem -> nominationWorkAreaItem.getNominationVersion().version()
+        )
+        .containsExactly(
+            tuple(
+                nomination.getId(),
+                2
+            )
+        );
+  }
+
+  @ParameterizedTest
+  @MethodSource("getPreSubmissionStatuses")
+  void getNominationDetailsForWorkArea_whenMultipleNominationVersions_andLatestIsPreSubmission_thenLatestSubmittedNominationDetailIsReturned(NominationStatus nominationStatus) {
+
+    // GIVEN a user with the manage nominations permission in the regulator team
+    var manageNominationUser = givenUserExistsInTeamWithRoles(
+        TeamType.REGULATOR,
+        Collections.singleton(RegulatorTeamRole.MANAGE_NOMINATION)
+    );
+
+    // AND the user is logged in
+    SamlAuthenticationUtil.Builder()
+        .withUser(manageNominationUser)
+        .setSecurityContext();
+
+    // AND there exist a nomination which has a submitted version
+
+    var nomination = givenNominationExists();
+
+    var firstSubmittedNominationDetail = NominationDetailTestUtil.builder()
+        .withId(null)
+        .withNomination(nomination)
+        .withVersion(1)
+        .withStatus(NominationStatus.SUBMITTED)
+        .build();
+
+    givenNominationDetailExists(firstSubmittedNominationDetail);
+
+    // AND for the same nomination there exists a pre submission version
+    var secondPreSubmissionNominationDetailVersion = NominationDetailTestUtil.builder()
+        .withId(null)
+        .withNomination(nomination)
+        .withVersion(2)
+        .withStatus(nominationStatus)
+        .build();
+
+    givenNominationDetailExists(secondPreSubmissionNominationDetailVersion);
+
+    // WHEN we get the work area items for the logged in user
+    var workAreaItems = nominationWorkAreaQueryService.getWorkAreaItems();
+
+    // THEN only the latest post submitted version of the nomination is returned
+    assertThat(workAreaItems)
+        .extracting(
+            nominationWorkAreaItem -> nominationWorkAreaItem.getNominationId().id(),
+            nominationWorkAreaItem -> nominationWorkAreaItem.getNominationVersion().version()
+        )
+        .containsExactly(
+            tuple(
+                nomination.getId(),
+                1
+            )
+        );
+  }
+
+  private ServiceUserDetail givenUserExistsInTeamWithRoles(TeamType teamType, Set<TeamRole> teamRoles) {
+
     var user = ServiceUserDetailTestUtil.Builder()
         .withWuaId(1000L)
         .build();
 
-    // Ensure user is treated as currently logged in
-    SamlAuthenticationUtil.Builder()
-        .withUser(user)
-        .setSecurityContext();
-
-    // Stub regulator team
-    var team = TeamTestUtil.Builder()
-        .withTeamType(TeamType.REGULATOR)
+    var regulatorTeam = TeamTestUtil.Builder()
         .withId(null)
+        .withTeamType(teamType)
         .build();
 
-    entityManager.persistAndFlush(team);
+    entityManager.persistAndFlush(regulatorTeam);
 
-    // Add user to team with the previously defined roles
-    teamMemberRoleService.updateUserTeamRoles(team, new WebUserAccountId(user.wuaId()),
-        TeamRoleUtil.getRoleNames(userRoles));
+    teamRoles.forEach(teamRole -> {
+      var teamMemberRole = TeamMemberRoleTestUtil.Builder()
+          .withUuid(null)
+          .withTeam(regulatorTeam)
+          .withRole(teamRole.name())
+          .withWebUserAccountId(user.wuaId())
+          .build();
 
-    // Create and persist nomination details
+      entityManager.persistAndFlush(teamMemberRole);
+    });
+
+    return user;
+  }
+
+  private Nomination givenNominationExists() {
+
     var nomination = NominationTestUtil.builder()
         .withId(null)
         .build();
 
     entityManager.persistAndFlush(nomination);
 
-    var deletedNominationDetail = NominationDetailTestUtil.builder()
-        .withNomination(nomination)
-        .withNominationId(new NominationId(nomination.getId()))
+    return nomination;
+  }
+
+  private void givenNominationDetailExists(NominationDetail nominationDetail) {
+
+    entityManager.persistAndFlush(nominationDetail);
+
+    var applicantDetailForNominationDetail = ApplicantDetailTestUtil.builder()
         .withId(null)
-        .withStatus(NominationStatus.DELETED)
+        .withNominationDetail(nominationDetail)
         .build();
 
-    var draftNominationDetail = NominationDetailTestUtil.builder()
-        .withNomination(nomination)
-        .withNominationId(new NominationId(nomination.getId()))
-        .withId(null)
-        .withStatus(NominationStatus.DRAFT)
-        .build();
+    entityManager.persistAndFlush(applicantDetailForNominationDetail);
+  }
 
-    deletedNominationDetail = entityManager.persistAndFlush(deletedNominationDetail);
-    draftNominationDetail = entityManager.persistAndFlush(draftNominationDetail);
+  private static Stream<Arguments> getPreSubmissionStatuses() {
+    return getSubmissionStatusArguments(NominationStatusSubmissionStage.PRE_SUBMISSION);
+  }
 
-    var draftApplicantDetails = ApplicantDetailTestUtil.builder()
-        .withNominationDetail(draftNominationDetail)
-        .withId(null)
-        .build();
+  private static Stream<Arguments> getPostSubmissionStatuses() {
+    return getSubmissionStatusArguments(NominationStatusSubmissionStage.POST_SUBMISSION);
+  }
 
-    var deletedApplicantDetails = ApplicantDetailTestUtil.builder()
-        .withNominationDetail(deletedNominationDetail)
-        .withId(null)
-        .build();
-
-    entityManager.persistAndFlush(draftApplicantDetails);
-    entityManager.persistAndFlush(deletedApplicantDetails);
-
-    var dtos = nominationWorkAreaQueryService.getWorkAreaItems();
-    assertThat(dtos)
-        .map(result -> result.getNominationId().id())
-        .containsExactly(draftNominationDetail.getNomination().getId());
-
+  private static Stream<Arguments> getSubmissionStatusArguments(NominationStatusSubmissionStage submissionStage) {
+    return NominationStatus.getAllStatusesForSubmissionStage(submissionStage)
+        .stream()
+        .map(Arguments::of);
   }
 
 }
